--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A simple cloud store",
   "main": "main.ts",
   "scripts": {
+    "watch" : "tsc --skipLibCheck --watch",
+    "dev": "nodemon --quiet --watch dist --exec 'clear;node dist/index.js'",
     "test": "jest"
   },
   "repository": {
@@ -16,7 +18,10 @@
     "url": "https://github.com/masterchief01/skynet/issues"
   },
   "homepage": "https://github.com/masterchief01/skynet#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@types/node": "^14.14.20",
+    "nodemon": "^2.0.7",
     "typescript": "^4.1.3"
   }
 }
