--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple cloud store",
   "main": "main.ts",
   "scripts": {
-    "watch" : "tsc --skipLibCheck --watch",
+    "watch": "tsc --skipLibCheck --watch",
     "dev": "nodemon --quiet --watch dist --exec 'clear;node dist/index.js'",
     "test": "jest"
   },
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/masterchief01/skynet#readme",
   "dependencies": {},
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.20",
     "nodemon": "^2.0.7",
     "typescript": "^4.1.3"
