--- a/package.json
+++ b/package.json
@@ -1,28 +1,44 @@
 {
-  "name": "skynet",
-  "version": "1.0.0",
-  "description": "A simple cloud store",
-  "main": "main.ts",
-  "scripts": {
-    "watch": "tsc --skipLibCheck --watch",
-    "dev": "nodemon --quiet --watch dist --exec 'clear;node dist/index.js'",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/masterchief01/skynet.git"
-  },
-  "author": "Pranjal Walia <pranjalwalia77@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/masterchief01/skynet/issues"
-  },
-  "homepage": "https://github.com/masterchief01/skynet#readme",
-  "dependencies": {},
-  "devDependencies": {
-    "@types/express": "^4.17.9",
-    "@types/node": "^14.14.20",
-    "nodemon": "^2.0.7",
-    "typescript": "^4.1.3"
-  }
+    "name": "skynet",
+    "version": "1.0.0",
+    "description": "A simple cloud store",
+    "main": "main.ts",
+    "scripts": {
+        "start": "node ./dist/main.js",
+        "dev": "nodemon -x ts-node src/main.ts",
+        "build": "yarn clean && prettier --write src/ && tsc",
+        "clean": "rm -rf dist",
+        "test": "jest",
+        "lint": "eslint src/*.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/masterchief01/skynet.git"
+    },
+    "author": "Pranjal Walia <pranjalwalia77@gmail.com>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/masterchief01/skynet/issues"
+    },
+    "homepage": "https://github.com/masterchief01/skynet#readme",
+    "dependencies": {
+        "@types/prettier": "^2.1.6",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "morgan": "^1.10.0",
+        "prettier": "^2.2.1"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.9",
+        "@types/node": "^14.14.20",
+        "@typescript-eslint/eslint-plugin": "^4.14.2",
+        "@typescript-eslint/parser": "^4.14.2",
+        "eslint": "^7.19.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.22.1",
+        "nodemon": "^2.0.7",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.1.3"
+    }
 }
