--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "start": "node ./dist/main.js",
         "dev": "nodemon -x ts-node src/main.ts",
+        "prod": "node dist/main.js",
         "build": "yarn clean && prettier --write src/ && tsc",
         "clean": "rm -rf dist",
         "test": "jest",
@@ -22,7 +23,11 @@
     },
     "homepage": "https://github.com/masterchief01/skynet#readme",
     "dependencies": {
+        "@babel/core": "^7.12.13",
+        "@babel/preset-env": "^7.12.13",
+        "@babel/preset-typescript": "^7.12.13",
         "@types/prettier": "^2.1.6",
+        "babel-jest": "^26.6.3",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
@@ -31,12 +36,14 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.9",
+        "@types/jest": "^26.0.20",
         "@types/node": "^14.14.20",
         "@typescript-eslint/eslint-plugin": "^4.14.2",
         "@typescript-eslint/parser": "^4.14.2",
         "eslint": "^7.19.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.22.1",
+        "jest": "^26.6.3",
         "nodemon": "^2.0.7",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.3"
