--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,29 @@
         "sourceType": "module"
     },
     "plugins": ["@typescript-eslint"],
+    "settings": {
+        "import/resolver": {
+            "node": {
+              "extensions": [".js", ".jsx", ".ts", ".tsx", ".json"]
+            }
+          }
+    }
+    },
     "rules": {
         "linebreak-style": 0,
         "no-console": "off",
         "import/prefer-default-export": "off",
-        "indent": ["error", 4]
+        "indent": ["error", 4],
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "js": "never",
+                "mjs": "never",
+                "jsx": "never",
+                "ts": "never",
+                "tsx": "never"
+            }
+        ]
     }
 }
