--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
         "express": "^4.17.1",
         "mongoose": "^5.11.15",
         "morgan": "^1.10.0",
+        "multer": "^1.4.2",
         "prettier": "^2.2.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.9",
         "@types/jest": "^26.0.20",
         "@types/mongoose": "^5.10.3",
+        "@types/multer": "^1.4.5",
         "@types/node": "^14.14.20",
         "@typescript-eslint/eslint-plugin": "^4.14.2",
         "@typescript-eslint/parser": "^4.14.2",
