--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "mongoose": "^5.11.15",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
-        "prettier": "^2.2.1"
+        "prettier": "^2.2.1",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@types/express": "^4.17.9",
@@ -42,6 +43,7 @@
         "@types/mongoose": "^5.10.3",
         "@types/multer": "^1.4.5",
         "@types/node": "^14.14.20",
+        "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.14.2",
         "@typescript-eslint/parser": "^4.14.2",
         "eslint": "^7.19.0",
