--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "babel-jest": "^26.6.3",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
+        "ejs": "^3.1.5",
         "express": "^4.17.1",
         "mongoose": "^5.11.15",
         "morgan": "^1.10.0",
@@ -38,6 +39,7 @@
         "uuid": "^8.3.2"
     },
     "devDependencies": {
+        "@types/ejs": "^3.0.5",
         "@types/express": "^4.17.9",
         "@types/jest": "^26.0.20",
         "@types/mongoose": "^5.10.3",
