--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@babel/core": "^7.12.13",
         "@babel/preset-env": "^7.12.13",
         "@babel/preset-typescript": "^7.12.13",
+        "@types/nodemailer": "^6.4.0",
         "@types/prettier": "^2.1.6",
         "babel-jest": "^26.6.3",
         "cors": "^2.8.5",
@@ -35,6 +36,7 @@
         "mongoose": "^5.11.15",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
+        "nodemailer": "^6.4.17",
         "prettier": "^2.2.1",
         "uuid": "^8.3.2"
     },
