--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "build": "yarn clean && prettier --write src/ && tsc",
         "clean": "rm -rf dist",
         "test": "jest",
-        "lint": "eslint src/*.js"
+        "lint": "eslint src/*.js",
+        "bundle:prod": "yarn build && webpack",
+        "bundle:dev": "yarn build && webpack"
     },
     "repository": {
         "type": "git",
@@ -50,11 +52,15 @@
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.14.2",
         "@typescript-eslint/parser": "^4.14.2",
+        "del": "^6.0.0",
         "eslint": "^7.19.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.22.1",
+        "gulp": "^4.0.2",
+        "gulp-run": "^1.7.1",
         "jest": "^26.6.3",
         "nodemon": "^2.0.7",
+        "require-dir": "^1.2.0",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.3"
     }
