--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@types/mongoose": "^5.10.3",
         "@types/multer": "^1.4.5",
         "@types/node": "^14.14.20",
+        "@types/supertest": "^2.0.10",
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.14.2",
         "@typescript-eslint/parser": "^4.14.2",
@@ -61,6 +62,7 @@
         "jest": "^26.6.3",
         "nodemon": "^2.0.7",
         "require-dir": "^1.2.0",
+        "supertest": "^6.1.3",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.3"
     }
