--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "scripts": {
         "start": "node ./dist/main.js",
+        "tspath":  "tspath -f",
         "dev": "nodemon -x ts-node src/main.ts",
         "prod": "node dist/main.js",
         "build": "yarn clean && prettier --write src/ && tsc && gulp postbuild",
@@ -68,6 +69,7 @@
         "require-dir": "^1.2.0",
         "supertest": "^6.1.3",
         "ts-node": "^9.1.1",
+        "tspath": "^1.3.7",
         "typescript": "^4.1.3"
     }
 }
