--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "start": "node ./dist/main.js",
         "dev": "nodemon -x ts-node src/main.ts",
         "prod": "node dist/main.js",
-        "build": "yarn clean && prettier --write src/ && tsc && gulp postbuild",
+        "build": "yarn clean && prettier --write src/ && tsc --project ./tsconfig.json && gulp postbuild",
         "clean": "rm -rf dist",
         "test": "jest",
         "lint": "eslint --ext src/*.ts",
