--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "main.ts",
     "engines": {
         "node": ">=12.0.0",
-        "npm": ">=6.0.0"
+        "npm": ">=6.0.0",
+        "yarn": ">=1.22.10"
     },
     "scripts": {
         "start": "node ./dist/main.js",
