--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,10 @@ jobs:
         docker:
             - image: circleci/node:12
         steps:
-            - checkout # special step to check out source code to working directory
-
             - restore_cache: # special step to restore the dependency cache
                   # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
                   keys:
-                      - v1-repo-{{ checksum "package-lock.json" }}
+                      - v1-repo-{{ checksum "yarn.lock" }}
 
             - run:
                   name: Install dependencies
