--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "scripts": {
         "start": "node ./dist/server.js",
         "dev": "nodemon -x ts-node ./src/server",
+        "dev:pipeline": "gulp dev:cleanup && nodemon -x ts-node ./src/server",
         "prod": "node dist/main.js",
         "build": "yarn clean && prettier --write src/ && tsc --project ./tsconfig.json && gulp postbuild",
         "clean": "rm -rf dist",
         "test": "jest",
         "lint": "eslint --ext src/*.ts",
+        "docgen": "cd docs && postman-to-markdown samples.postman_collection.json",
         "bundle:prod": "yarn build && webpack --mode=production",
         "bundle:dev": "yarn build && webpack --mode=development"
     },
