refactor: upgrade deps, change prettier confs

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "dev": "nodemon -x ts-node ./src/server",
         "dev:pipeline": "gulp dev:cleanup && nodemon -x ts-node ./src/server",
         "prod": "node dist/main.js",
-        "build": "yarn clean && prettier --write src/ && tsc --project ./tsconfig.json && gulp postbuild",
+        "build": "yarn clean && prettier -w src && tsc --project ./tsconfig.json && gulp postbuild",
         "clean": "rm -rf dist",
         "test": "jest",
         "lint": "eslint --ext src/*.ts",
